--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@ Temporary Items
 /obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
 /obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
 /obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+/packages/Autofac.4.4.0/Autofac.4.4.0.nupkg
+/packages/Autofac.4.4.0/lib/net45/Autofac.xml
+/packages/Autofac.4.4.0/lib/netstandard1.1/Autofac.xml
