--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ Temporary Items
 /packages/Autofac.4.4.0/Autofac.4.4.0.nupkg
 /packages/Autofac.4.4.0/lib/net45/Autofac.xml
 /packages/Autofac.4.4.0/lib/netstandard1.1/Autofac.xml
+/bin/Debug/PingExperiment.vshost.exe.manifest
