--- a/PingExperiment.csproj
+++ b/PingExperiment.csproj
@@ -54,8 +54,10 @@
     <Compile Include="Exceptions\UrlFormatDeniedException.cs" />
     <Compile Include="Exceptions\UrlFormatInvalidException.cs" />
     <Compile Include="Implementations\PingConfiguration.cs" />
+    <Compile Include="Interfaces\IConfigurationProvider.cs" />
     <Compile Include="Interfaces\IPing.cs" />
     <Compile Include="Interfaces\IPingConfiguration.cs" />
+    <Compile Include="IOC\AutofacConfiguration.cs" />
     <Compile Include="NetworkUsageResult.cs" />
     <Compile Include="Implementations\Ping.cs" />
     <Compile Include="PingResult.cs" />
@@ -64,6 +66,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegexHelper.cs" />
+    <Compile Include="Settings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
