--- a/PingExperiment.csproj
+++ b/PingExperiment.csproj
@@ -40,6 +40,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -49,10 +50,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AggregatedResult.cs" />
+    <Compile Include="Exceptions\ConfigurationException.cs" />
     <Compile Include="Exceptions\DnsResolveFailureException.cs" />
     <Compile Include="Exceptions\UriFormatInvalidException.cs" />
     <Compile Include="Exceptions\UrlFormatDeniedException.cs" />
     <Compile Include="Exceptions\UrlFormatInvalidException.cs" />
+    <Compile Include="Implementations\AppConfigConfigurationProvider.cs" />
     <Compile Include="Implementations\PingConfiguration.cs" />
     <Compile Include="Interfaces\IConfigurationProvider.cs" />
     <Compile Include="Interfaces\IPing.cs" />
