add experimental NctChecks

--- a/App.config
+++ b/App.config
@@ -3,4 +3,11 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
     </startup>
+  <appSettings>
+    <add key="Url" value="http://www.google.com"/>
+    <add key="Pings" value="50"/>
+    <add key="Timeout" value="2"/>
+    <add key="MaxNetworkUsage" value="10.0"/>
+    <add key="SecondsBetweenPings" value="0.0"/>
+  </appSettings>
 </configuration>
