--- a/PingExperiment.csproj
+++ b/PingExperiment.csproj
@@ -49,9 +49,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AggregatedResult.cs" />
     <Compile Include="Attributes\ConstraintAttribute.cs" />
     <Compile Include="Attributes\IsInterfaceAttribute.cs" />
+    <Compile Include="Entities\AggregatedResult.cs" />
+    <Compile Include="Entities\NetworkUsageResult.cs" />
+    <Compile Include="Entities\PingResult.cs" />
+    <Compile Include="Entities\PingResultEntry.cs" />
+    <Compile Include="Entities\PingResultEntryStatus.cs" />
     <Compile Include="Exceptions\ConfigurationException.cs" />
     <Compile Include="Exceptions\DnsResolveFailureException.cs" />
     <Compile Include="Exceptions\UriFormatInvalidException.cs" />
@@ -66,20 +70,16 @@
     <Compile Include="Interfaces\IPingConfiguration.cs" />
     <Compile Include="Interfaces\IResolver.cs" />
     <Compile Include="IOC\AutofacConfiguration.cs" />
-    <Compile Include="IOC\RuntimeChecks\BigEndianByteReader.cs" />
-    <Compile Include="IOC\RuntimeChecks\ConstraintFailedException.cs" />
-    <Compile Include="IOC\RuntimeChecks\IncorrectConstraintException.cs" />
-    <Compile Include="IOC\LockUtil.cs" />
-    <Compile Include="IOC\RuntimeChecks\NctChecks.cs" />
-    <Compile Include="NetworkUsageResult.cs" />
+    <Compile Include="Utils\BigEndianByteReader.cs" />
+    <Compile Include="Utils\ConstraintFailedException.cs" />
+    <Compile Include="Utils\IncorrectConstraintException.cs" />
+    <Compile Include="Utils\NctChecks.cs" />
     <Compile Include="Implementations\Ping.cs" />
-    <Compile Include="PingResult.cs" />
-    <Compile Include="PingResultEntry.cs" />
-    <Compile Include="PingResultEntryStatus.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegexHelper.cs" />
-    <Compile Include="Settings.cs" />
+    <Compile Include="ConfigurationSettingsHolder.cs" />
+    <Compile Include="Utils\LockUtil.cs" />
+    <Compile Include="Utils\RegexHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
